# ChangeLog for app-misc/cdspeed
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/cdspeed/ChangeLog,v 1.4 2004/04/10 09:28:41 mr_bones_ Exp $

  10 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> cdspeed-0.2.ebuild:
  clean older ebuild

*cdspeed-0.3 (14 Sep 2003)

  14 Sep 2003; <iggy@gentoo.org> cdspeed-0.3.ebuild:
  version bump thanks to hillster

*cdspeed-0.2 (06 Jan 2003)

  06 Jan 2003; Arcady Genkin <agenkin@gentoo.org> :
  Initial ebuild, submitted by Frank Zschockelt <gentoo@freakysoft.de>.