@@ -1,3 +1,3 @@
-MD5 41fbf7550899f2dd7b1188a2fdcac187 ChangeLog 582
-MD5 5d2e417c3f8b2e757b778470548cdf4e cdspeed-0.3.ebuild 719
+MD5 51566522b4102dafaecd72b7709f7215 ChangeLog 748
+MD5 a41b900bb626c0074f7e4b66181150c4 cdspeed-0.3.ebuild 849
 MD5 acc15f5059a345c17e4f3d5a39426826 files/digest-cdspeed-0.3 61
