@@ -1,33 +1,35 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/cdspeed/Attic/cdspeed-0.3.ebuild,v 1.4 2004/02/29 17:19:59 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/cdspeed/Attic/cdspeed-0.3.ebuild,v 1.5 2004/04/10 09:32:45 mr_bones_ Exp $
 
 DESCRIPTION="Change the speed of your CD drive."
 HOMEPAGE="http://linuxfocus.org/~guido/"
-LICENSE="GPL-2"
-
-DEPEND="virtual/glibc"
-KEYWORDS="x86 ~ppc ~sparc ~alpha ~hppa ~mips"
-
-SLOT="0"
 SRC_URI="http://linuxfocus.org/~guido/${P}.tar.gz"
-S=${WORKDIR}/${P}
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="x86 ~ppc ~sparc ~alpha ~hppa ~mips"
+IUSE=""
+
+RDEPEND="virtual/glibc"
+DEPEND="${RDEPEND}
+	>=sys-apps/sed-4"
 
 src_unpack() {
 	unpack ${A}
 	cd ${S}
-	sed -i -e "s:^CFLAGS=-O.*:CFLAGS=${CFLAGS}:" \
-		Makefile
+	sed -i \
+		-e 's:^CFLAGS=.*:CFLAGS=$(E_CFLAGS):' Makefile \
+			|| die "sed Makefile failed"
 }
 
 src_compile() {
-	emake || die
+	emake E_CFLAGS="${CFLAGS}" || die "emake failed"
 }
 
 src_install() {
-	exeinto /usr/bin
-	doexe cdspeed
+	dobin cdspeed || die "dobin failed"
 	exeinto /usr/lib/cdspeed
-	doexe cdmount
+	doexe cdmount || die "doexe failed"
 	dodoc README
 }
