@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/cdspeed
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/cdspeed/ChangeLog,v 1.4 2004/04/10 09:28:41 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/cdspeed/ChangeLog,v 1.5 2004/04/10 09:32:45 mr_bones_ Exp $
+
+  10 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> cdspeed-0.3.ebuild:
+  don't assign default to S; depend on sed >= 4; error check sed; use user
+  CFLAGS; tidy
 
   10 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> cdspeed-0.2.ebuild:
   clean older ebuild
